--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,4 @@
-.nextflow/history
-.nextflow/cache/106028de-c1e4-4e10-91f6-19657eb670e3/index.clever_hamilton
-.nextflow/cache/106028de-c1e4-4e10-91f6-19657eb670e3/db/000003.log
-.nextflow/cache/106028de-c1e4-4e10-91f6-19657eb670e3/db/CURRENT
-.nextflow/cache/106028de-c1e4-4e10-91f6-19657eb670e3/db/LOCK
-.nextflow/cache/106028de-c1e4-4e10-91f6-19657eb670e3/db/MANIFEST-000002
-.nextflow/cache/277a7454-3e0e-47c8-8119-08dc19337ebe/index.mad_celsius
-.nextflow/cache/277a7454-3e0e-47c8-8119-08dc19337ebe/db/000003.log
-.nextflow/cache/277a7454-3e0e-47c8-8119-08dc19337ebe/db/CURRENT
-.nextflow/cache/277a7454-3e0e-47c8-8119-08dc19337ebe/db/LOCK
-.nextflow/cache/277a7454-3e0e-47c8-8119-08dc19337ebe/db/MANIFEST-000002
-.nextflow/cache/3a949668-a1a6-4f83-bb68-571516236c43/index.backstabbing_goodall
-.nextflow/cache/3a949668-a1a6-4f83-bb68-571516236c43/db/000003.log
-.nextflow/cache/3a949668-a1a6-4f83-bb68-571516236c43/db/CURRENT
-.nextflow/cache/3a949668-a1a6-4f83-bb68-571516236c43/db/LOCK
-.nextflow/cache/3a949668-a1a6-4f83-bb68-571516236c43/db/MANIFEST-000002
-.nextflow/cache/4fc8b700-215f-40df-b1a7-02203b5b3e68/index.curious_magritte
-.nextflow/cache/4fc8b700-215f-40df-b1a7-02203b5b3e68/db/000003.log
-.nextflow/cache/4fc8b700-215f-40df-b1a7-02203b5b3e68/db/CURRENT
-.nextflow/cache/4fc8b700-215f-40df-b1a7-02203b5b3e68/db/LOCK
-.nextflow/cache/4fc8b700-215f-40df-b1a7-02203b5b3e68/db/MANIFEST-000002
-.nextflow/cache/6b5d485a-e0e1-477a-8e44-6f594557e583/index.hopeful_northcutt
-.nextflow/cache/6b5d485a-e0e1-477a-8e44-6f594557e583/db/000003.log
-.nextflow/cache/6b5d485a-e0e1-477a-8e44-6f594557e583/db/CURRENT
-.nextflow/cache/6b5d485a-e0e1-477a-8e44-6f594557e583/db/LOCK
-.nextflow/cache/6b5d485a-e0e1-477a-8e44-6f594557e583/db/MANIFEST-000002
-.nextflow/cache/da7ebcf7-e989-4d3c-9fa1-5e9ec11cd222/index.sick_pasteur
-.nextflow/cache/da7ebcf7-e989-4d3c-9fa1-5e9ec11cd222/db/000003.log
-.nextflow/cache/da7ebcf7-e989-4d3c-9fa1-5e9ec11cd222/db/CURRENT
-.nextflow/cache/da7ebcf7-e989-4d3c-9fa1-5e9ec11cd222/db/LOCK
-.nextflow/cache/da7ebcf7-e989-4d3c-9fa1-5e9ec11cd222/db/MANIFEST-000002
-.nextflow/cache/db1e61f9-b6ec-4b24-9e52-93e664e05ef5/index.boring_einstein
-.nextflow/cache/db1e61f9-b6ec-4b24-9e52-93e664e05ef5/db/000003.log
-.nextflow/cache/db1e61f9-b6ec-4b24-9e52-93e664e05ef5/db/CURRENT
-.nextflow/cache/db1e61f9-b6ec-4b24-9e52-93e664e05ef5/db/LOCK
-.nextflow/cache/db1e61f9-b6ec-4b24-9e52-93e664e05ef5/db/MANIFEST-000002
-.nextflow/cache/e9c22a83-473b-4e6f-bcdd-112f4e5d7e84/index.crazy_poitras
-.nextflow/cache/e9c22a83-473b-4e6f-bcdd-112f4e5d7e84/db/000003.log
-.nextflow/cache/e9c22a83-473b-4e6f-bcdd-112f4e5d7e84/db/CURRENT
-.nextflow/cache/e9c22a83-473b-4e6f-bcdd-112f4e5d7e84/db/LOCK
-.nextflow/cache/e9c22a83-473b-4e6f-bcdd-112f4e5d7e84/db/MANIFEST-000002
-.nextflow/cache/ec376abf-9d15-413a-9f64-ee2e3782db0c/index.infallible_goodall
-.nextflow/cache/ec376abf-9d15-413a-9f64-ee2e3782db0c/db/000003.log
-.nextflow/cache/ec376abf-9d15-413a-9f64-ee2e3782db0c/db/CURRENT
-.nextflow/cache/ec376abf-9d15-413a-9f64-ee2e3782db0c/db/LOCK
-.nextflow/cache/ec376abf-9d15-413a-9f64-ee2e3782db0c/db/MANIFEST-000002
+.nextflow/
 data/bam/forward.bam
 data/bam/forward.bam.bai
 data/bam/reverse.bam
